--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "student_praise",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,9 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.2.0",
+    "framer-motion": "^12.23.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-hot-toast": "^2.5.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "postcss": "^8",
